refactor(property): Have DetectProperties return a Properties object, force printCurrentValues and printErrors to take in a PropertyMap.